tests/fixtures/invalid/float_bitor_float.py
# Cannot bitwise OR Float and Float
x: float = 1.0 | 1.0
